showing the use of the export and edit swagger notation and json
